- Add new resource types for distributed status data and response time   data.  Both live in performance and are always shown on the choose   resource page there.  The response time resource type is now used to   get data for the ResponseTimeModel (and is the only resource type there).   Eventually the ResponseTimeModel will go away, and along with it the need   to differentiate based on "type" (e.g.: performance or response). - Added a GraphDao for fetching prefabricated and adhoc graph definitions   including an implementation for the current properties file format.   Supporting objects are PrefabGraphType and AdhocGraphType (for the two   major groups of performance and response graphs) and PrefabGraph (which   is now a boring old model object).  The code for the properties   implementation was pulled out of GraphModelAbstract and RRDGraphServlet. - The RRDGraphServlet now requires a resourceType to be passed and the   root directory for RRD files is now based on the resourceType, not the   type. - Use Spring to create and wire up the GraphDao, ResponseTimeModel, and   PerformanceModel objects.  None of the servlets or JSP pages are currently   wired up directly by Spring, so they get these beans from the   WebApplicationContext. - Switch the performance adhoc graph JSPs over to be fully resourceType   aware.  They can now generate adhoc graphs for any resource type. - *LOTS* of supporting changes and cleanup.

--- a/opennms-webapp/src/main/webapp/WEB-INF/jspf/KSC/init2.jspf
+++ b/opennms-webapp/src/main/webapp/WEB-INF/jspf/KSC/init2.jspf
@@ -36,6 +36,9 @@
 
 --%>
 
+<%@page import="org.springframework.web.context.WebApplicationContext" %>
+<%@page import="org.springframework.web.context.support.WebApplicationContextUtils" %>
+
 <%!
     public PerformanceModel model = null;
     protected KSC_PerformanceReportFactory reportFactory = null;
@@ -52,12 +55,8 @@
     
     public void initPerfModel() throws ServletException
     {
-        try {
-            this.model = new PerformanceModel( org.opennms.web.ServletInitializer.getHomeDir() );
-        }
-        catch( Exception e ) {
-            throw new ServletException( "Could not initialize the PerformanceModel", e );
-        }
+	    WebApplicationContext m_webAppContext = WebApplicationContextUtils.getRequiredWebApplicationContext(getServletContext());
+		model = (PerformanceModel) m_webAppContext.getBean("performanceModel", PerformanceModel.class);
     }
     
     public void initReportFactory() throws ServletException
