Add "normal" table and td class for cases where we want tables to keep things aligned but for nothing else.

--- a/opennms-webapp/src/main/webapp/css/styles.css
+++ b/opennms-webapp/src/main/webapp/css/styles.css
@@ -250,6 +250,15 @@ span.filter {
 	background-color: #DDD;
 	padding: 3px 4px;
 }
+
+table.normal {
+	width: auto;
+}
+td.normal {
+	border: none;
+	background-color: transparent;
+}
+
 table {
 	border-collapse: collapse;
 	width: 100%;
