Work on the node availability box a bit... let me know if you like/don't like/etc.

--- a/opennms-webapp/src/main/webapp/css/styles.css
+++ b/opennms-webapp/src/main/webapp/css/styles.css
@@ -643,3 +643,8 @@ tr.CellStatus td.Cleared
 	border-top: 2px solid #999 !important;
 	background-image: url(../images/bgCleared.png);
 }
+
+tr.CellStatus td.nobright
+{
+	background-image: none;
+}
