--- a/opennms-webapp/src/main/webapp/WEB-INF/jspf/showRequestDetail.jspf
+++ b/opennms-webapp/src/main/webapp/WEB-INF/jspf/showRequestDetail.jspf
@@ -15,6 +15,21 @@ calling JSP page.
 --%>
 
 <table>
+<tr><th colspan="3">Request parameters</th></tr>
+<tr><th>Name</th><th>Class</th><th>Value</th></tr>
+<%
+java.util.Enumeration __request_param_e = request.getParameterNames();
+while (__request_param_e.hasMoreElements()) {
+    String name = (String) __request_param_e.nextElement();
+    String valueClass = request.getParameter(name).getClass().getName();
+    String value = request.getParameter(name).toString();
+    out.println("<tr><td>" + org.opennms.web.Util.htmlify(name) + "</td><td>"
+                + org.opennms.web.Util.htmlify(valueClass) + "</td><td>"
+                + org.opennms.web.Util.htmlify(value) + "</td></tr>");
+}
+%>
+</table>
+<table>
 <tr><th colspan="3">Request attributes</th></tr>
 <tr><th>Name</th><th>Class</th><th>Value</th></tr>
 <%
