--- a/opennms-webapp/src/main/webapp/WEB-INF/jspf/showRequestDetail.jspf
+++ b/opennms-webapp/src/main/webapp/WEB-INF/jspf/showRequestDetail.jspf
@@ -29,6 +29,23 @@ while (__request_param_e.hasMoreElements()) {
 }
 %>
 </table>
+
+<table>
+<tr><th colspan="3">Page context attributes</th></tr>
+<tr><th>Name</th><th>Class</th><th>Value</th></tr>
+<%
+java.util.Enumeration __pageContext_attr_e = pageContext.getAttributeNamesInScope(PageContext.PAGE_SCOPE);
+while (__pageContext_attr_e.hasMoreElements()) {
+    String name = (String) __pageContext_attr_e.nextElement();
+    String valueClass = pageContext.getAttribute(name, PageContext.PAGE_SCOPE).getClass().getName();
+    String value = pageContext.getAttribute(name, PageContext.PAGE_SCOPE).toString();
+    out.println("<tr><td>" + org.opennms.web.Util.htmlify(name) + "</td><td>"
+                + org.opennms.web.Util.htmlify(valueClass) + "</td><td>"
+                + org.opennms.web.Util.htmlify(value) + "</td></tr>");
+}
+%>
+</table>
+
 <table>
 <tr><th colspan="3">Request attributes</th></tr>
 <tr><th>Name</th><th>Class</th><th>Value</th></tr>
