--- a/opennms-webapp/src/main/webapp/css/dashboard.css
+++ b/opennms-webapp/src/main/webapp/css/dashboard.css
@@ -18,6 +18,12 @@ table.dashboard table > tbody > tr > td {
 	margin: 0;
 }
 
+table.dashboard table > tbody > tr.CellStatus > td {
+	background-position:left top;
+	background-repeat:repeat-y;
+	padding-left:20px;
+}
+
 table.dashboard table > tbody > tr > td.divider {
 	border-top-width: 2px;
 	padding: 4px 5px;
