--- a/opennms-webapp/src/main/webapp/css/dashboard.css
+++ b/opennms-webapp/src/main/webapp/css/dashboard.css
@@ -3,6 +3,9 @@ table.dashboard {
 }
 
 td.dashletCell {
+	vertical-align: top;
+	border: none;
+	background-color: inherit;
 	padding: 0;
 	margin: 0;
 }
@@ -16,6 +19,10 @@ table.dashboard table {
 table.dashboard table > tbody > tr > td {
 	padding: 0;
 	margin: 0;
+}
+
+table.dashboard table > tbody > tr.CellStatus > td.selected {
+	background-color: highlight;
 }
 
 table.dashboard table > tbody > tr.CellStatus > td {
@@ -55,6 +62,10 @@ table.dashboard table > tbody > tr > td.bright {
 
 table.pager td {
 	border-style: none;
+}
+
+tr.header td.selected {
+	background-color: highlight;
 }
 
 tr.header td {
