Add CSS attribute overflow: auto; to div.boxWrapper (fixes bug 506)

--- a/opennms-webapp/src/main/webapp/css/styles.css
+++ b/opennms-webapp/src/main/webapp/css/styles.css
@@ -124,6 +124,7 @@ div.boxWrapper {
 	border: 1px solid #999;
 	border-top: 0;
 	padding: 4px 6px;
+	overflow: auto;
 }
 div.boxWrapper div.col {
 	margin:  20px auto;
