--- a/core/web-assets/src/main/assets/js/apps/onms-geoservice/views/config/google.html
+++ b/core/web-assets/src/main/assets/js/apps/onms-geoservice/views/config/google.html
@@ -79,6 +79,7 @@
                     on="Yes" 
                     off="No"
                     size="btn-sm"
+                    width="51px"
                     ng-class="{ 'is-invalid' : form.googleSystemProxy.$invalid || configError.useSystemProxy }"
             ></toggle>
             <p id="configError.useSystemProxy" class="invalid-feedback">{{configError.useSystemProxy}}</p>
