--- a/core/web-assets/src/main/assets/js/apps/onms-geoservice/views/config/nominatim.html
+++ b/core/web-assets/src/main/assets/js/apps/onms-geoservice/views/config/nominatim.html
@@ -57,6 +57,7 @@
                     on="Yes"
                     off="No"
                     size="btn-sm"
+                    width="51px"
                     ng-model="geocoder.config.acceptUsageTerms"
                     ng-class="{ 'is-invalid' : form.nominatimAcceptUsageTerms.$invalid || geocoder.config.acceptUsageTerms === false || configError.acceptUsageTerms }"
             ></toggle>
@@ -69,6 +70,7 @@
                     on="Yes"
                     off="No"
                     size="btn-sm"
+                    width="51px"
                     ng-model="geocoder.config.useSystemProxy"
                     ng-class="{ 'is-invalid' : form.nominatimSystemProxy.$invalid || configError.useSystemProxy }"
             ></toggle>
