--- a/core/web-assets/src/main/assets/js/apps/onms-geoservice/views/config.html
+++ b/core/web-assets/src/main/assets/js/apps/onms-geoservice/views/config.html
@@ -1,4 +1,4 @@
-<div class="">
+<div>
     <form class="form" name="configForm">
         <div ng-repeat="geocoder in geocoders">
             <div class="mt-3 ml-2">
