--- a/core/web-assets/src/main/assets/js/apps/onms-geoservice/views/config/mapquest.html
+++ b/core/web-assets/src/main/assets/js/apps/onms-geoservice/views/config/mapquest.html
@@ -30,6 +30,7 @@
                     on="Yes"
                     off="No"
                     size="btn-sm"
+                    width="51px"
                     ng-class="{ 'is-invalid' : form.mapquestSystemProxy.$invalid || configError.useSystemProxy }"
             ></toggle>
             <p id="configError.useSystemProxy" class="invalid-feedback">{{configError.useSystemProxy}}</p>
